# ligen-cmake

crates/core/: Cargo.toml
crates/core/src/: CMakeLists.txt  CMakeLists.txt.c  CMakeLists.txt.cpp  lib.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/main/: Cargo.toml
crates/main/src/: lib.rs
