[package]
name          = "ligen-cmake-macro"
version       = "0.1.5-alpha.0"
authors       = [ "Danilo Guanabara <danguafer@gmail.com>" ]
edition       = "2018"
description   = "CMake project generator"
license       = "Apache-2.0"
documentation = "https://docs.rs/ligen-cmake"
readme        = "../../README.md"

[lib]
proc-macro = true

[dependencies]
ligen            = "0.1.14"
ligen-cmake-core = "0.1.4"
