[package]
name          = "ligen-cmake"
version       = "0.1.2-alpha.0"
authors       = [ "Danilo Guanabara <danguafer@gmail.com>" ]
edition       = "2018"
description   = "CMake project generator"
license       = "Apache-2.0"
documentation = "https://docs.rs/ligen-cmake"
readme        = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligen-cmake-macro = { path = "../macro" }
ligen-cmake-core  = { path = "../core"  }
